# asynchronous-comprehend

./: README.md  app.py  sample-event.json
lambdas/PollJobStatusFunction/: PollJobStatusFunction.py
lambdas/SubmitJobFunction/: SubmitJobFunction.py
logger/: event_logging_stack.py
polling/: polling_stack.py
s3Events/: README.md  app.py  pyproject.toml
s3Events/s3_events/: s3_events_stack.py
s3Events/tests/unit/: test_s3_events_stack.py
